--- a/style.css
+++ b/style.css
@@ -318,7 +318,178 @@ footer {
 
 /* footer ends */
 
+/* faqs page starts*/
+
+/* faqs banner starts */
+
+.faqs-banner {
+  margin-top: 30px;
+  .txt {
+    margin-top: 200px;
+    h1 {
+      font-size: 40px;
+      font-weight: 700;
+      span {
+        border-bottom: 5px solid #e52936;
+      }
+    }
+    p {
+      font-size: 16px;
+      font-weight: 400;
+    }
+  }
+}
+
+.faq-sec1 {
+  margin-left: 250px;
+  margin-top: 100px;
+  .top {
+    display: flex;
+    border: 1px solid #e52936;
+    padding: 10px 0;
+    border-radius: 20px;
+    width: 70%;
+    h3 {
+      font-size: 18px;
+      font-weight: 500;
+    }
+    p {
+      font-size: 14px;
+      font-weight: 400;
+    }
+    span {
+      background-color: #e52936;
+      color: white;
+      border-radius: 100%;
+      padding: 5px;
+    }
+  }
+  .bt {
+    box-shadow: 2px 2px 2px 2px rgb(228, 227, 227);
+    margin-top: 20px;
+    width: 70%;
+    padding: 25px 0;
+    border-radius: 20px;
+    span {
+      box-shadow: 2px 3px 3px 2px rgb(228, 227, 227);
+      color: #e52936;
+      border-radius: 100%;
+      padding: 5px;
+    }
+  }
+}
+
+/* faqs banner ends */
+
+/* faqs page ends */
+
+/* facility page starts */
+
+.fac-banner {
+  margin-top: 20px;
+  margin-left: 350px;
+  .txt {
+    text-align: center;
+    margin-top: 100px;
+    h1 {
+      font-size: 40px;
+      font-weight: 700;
+      span {
+        border-bottom: 5px solid #e52936;
+      }
+    }
+    p {
+      font-size: 16px;
+      font-weight: 400;
+    }
+  }
+}
+
+.fac-sec1 {
+  margin-top: 100px;
+  .yy {
+    margin-top: 23px;
+  }
+}
+
+/* facility page ends */
+
+/* contact page starts */
+
+/* banner starts */
+.contact-banner {
+  margin-top: 20px;
+  margin-left: 300px;
+  .txt {
+    text-align: center;
+    margin-top: 100px;
+    h1 {
+      font-size: 40px;
+      font-weight: 700;
+      span {
+        border-bottom: 5px solid #e52936;
+      }
+    }
+    p {
+      font-size: 16px;
+      font-weight: 400;
+    }
+  }
+}
+
+/* banner ends */
+
+.form-ctn {
+  background-image: url(images/contact-images/map-bg.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: right top;
+  margin-top: 100px;
+  .txt {
+    h1 {
+      font-size: 54px;
+      font-weight: 800;
+    }
+    p {
+      font-size: 14px;
+      font-weight: 400;
+    }
+    span {
+      color: #e52936;
+    }
+    form {
+      input {
+        padding: 10px 200px 10px 10px;
+        border-radius: 10px;
+        border: 1px solid rgb(209, 208, 208);
+        margin-bottom: 20px;
+      }
+      textarea {
+        padding: 10px 220px 80px 10px;
+        border-radius: 10px;
+        border: 1px solid rgb(209, 208, 208);
+        margin-bottom: 20px;
+      }
+      a {
+        padding: 10px 170px 10px 170px;
+        border-radius: 30px;
+        background-color: #e52936;
+        color: white;
+        text-decoration: none;
+      }
+    }
+  }
+  .map {
+    iframe {
+      width: 500px;
+      margin-top: 100px;
+    }
+  }
+}
+/* contact page ends */
+
 /* media query */
+
 @media (max-width: 1024px) {
   nav {
     .menu {
@@ -364,6 +535,80 @@ footer {
       }
     }
   }
+  /* faq page starts */
+  .faq-sec1 {
+    margin-left: 120px;
+    .top {
+      width: 90%;
+    }
+    .bt {
+      width: 90%;
+    }
+  }
+  /* faq page ends */
+
+  /* facility page starts */
+
+  .fac-banner {
+    margin-left: 200px;
+  }
+
+  /* facility page ends */
+
+  /* contact page starts */
+
+  .contact-banner {
+    margin-left: 160px;
+  }
+
+.form-ctn {
+  .map {
+    iframe {
+      width: 400px;
+    }
+  }
+}
+  /* contact page ends */
+}
+
+@media (max-width: 915px) {
+   /* contact page starts */
+
+  .contact-banner {
+    margin-left: 0;
+  } 
+
+.form-ctn {
+  .txt {
+    h1 {
+      font-size: 40px;
+    }
+    p {
+      font-size: 11px;
+    }
+    span {
+      color: #e52936;
+    }
+    form {
+      input {
+        padding: 10px 120px 10px 10px;
+      }
+      textarea {
+        padding: 10px 140px 80px 10px;
+      }
+      a {
+        padding: 10px 130px 10px 130px;
+      }
+    }
+  }
+  .map {
+    iframe {
+      width: 300px;
+      margin-top: 100px;
+    }
+  }
+}
+   /* contact page ends */
 }
 
 @media (max-width: 770px) {
@@ -432,6 +677,44 @@ footer {
       font-size: 50px;
     }
   }
+  /* faq pages starts */
+
+  .faqs-banner {
+    .fbn-img {
+      img {
+        width: 400px;
+      }
+    }
+    .txt {
+      margin-top: 80px;
+    }
+  }
+  .faq-sec1 {
+    margin-left: 60px;
+    .top {
+      h3 {
+        font-size: 14px;
+      }
+      p {
+        font-size: 12px;
+      }
+    }
+  }
+  /* faq pages ends */
+
+  /* facility page starts */
+  .fac-banner {
+    margin-left: 50px;
+  }
+
+  /* facility page ends */
+
+  /* contact page starts */
+
+  .contact-banner {
+    margin-left: 0;
+  }
+  /* contact page ends */
 }
 
 @media (max-width: 550px) {
@@ -480,6 +763,70 @@ footer {
       }
     }
   }
+  /* faq page starts */
+  .faqs-banner {
+    .txt {
+      margin-top: 0;
+    }
+  }
+  /* faq page ends */
+
+  /* facility page starts */
+
+  .fac-banner {
+    margin-left: 0;
+    img {
+      margin-left: 120px;
+    }
+    .tt {
+      img {
+        margin-left: 150px;
+      }
+    }
+  }
+  .fac-sec1 {
+    .rep {
+      padding-bottom: 22px;
+    }
+    .rpp {
+      padding-top: 22px;
+    }
+  }
+  /* facility page ends */
+
+  /* contact page starts */
+
+  .contact-banner {
+    img {
+      padding-left: 180px;
+    }
+  }
+
+  .form-ctn {
+  margin-top: 100px;
+  background-image: none;
+  .txt {
+    form {
+      input {
+        padding: 10px 280px 10px 10px;
+      }
+      textarea {
+        padding: 10px 310px 80px 10px;
+      }
+      a {
+        padding: 10px 200px 10px 200px;
+      }
+    }
+  }
+  .map {
+    iframe {
+      width: 500px;
+      margin-top: 100px;
+    }
+  }
+}
+
+  /* contact page ends */
 }
 
 @media (max-width: 440px) {
@@ -501,273 +848,95 @@ footer {
       font-size: 25px;
     }
   }
-}
 
-/* faqs page starts*/
-
-/* faqs banner starts */
-
-.faqs-banner {
-  margin-top: 30px;
-  .txt {
-    margin-top: 200px;
-    h1 {
-      font-size: 40px;
-      font-weight: 700;
-      span {
-        border-bottom: 5px solid #e52936;
-      }
-    }
-    p {
-      font-size: 16px;
-      font-weight: 400;
-    }
-  }
-}
-
-.faq-sec1 {
-  margin-left: 250px;
-  margin-top: 100px;
-  .top {
-    display: flex;
-    border: 1px solid #e52936;
-    padding: 10px 0;
-    border-radius: 20px;
-    width: 70%;
-    h3 {
-      font-size: 18px;
-      font-weight: 500;
-    }
-    p {
-      font-size: 14px;
-      font-weight: 400;
-    }
-    span {
-      background-color: #e52936;
-      color: white;
-      border-radius: 100%;
-      padding: 5px;
-    }
-  }
-  .bt {
-    box-shadow: 2px 2px 2px 2px rgb(228, 227, 227);
-    margin-top: 20px;
-    width: 70%;
-    padding: 25px 0;
-    border-radius: 20px;
-    span {
-      box-shadow: 2px 3px 3px 2px rgb(228, 227, 227);
-      color: #e52936;
-      border-radius: 100%;
-      padding: 5px;
-    }
-  }
-}
-
-/* faqs banner ends */
-
-/* faqs page ends */
-
-/* media query */
-
-@media (max-width: 1024px) {
-  .faq-sec1 {
-    margin-left: 120px;
-    .top {
-      width: 90%;
-    }
-    .bt {
-      width: 90%;
-    }
-  }
-}
-
-@media (max-width: 770px) {
-  .faqs-banner {
-    .fbn-img {
-      img {
-        width: 400px;
-      }
-    }
-    .txt {
-      margin-top: 80px;
-    }
-  }
-  .faq-sec1 {
-    margin-left: 60px;
-    .top {
-      h3 {
-        font-size: 14px;
-      }
-      p {
-        font-size: 12px;
-      }
-    }
-  }
-}
-
-@media (max-width: 545px) {
-  .faqs-banner {
-    .txt {
-      margin-top: 0;
-    }
-  }
-}
-
-/* facility page starts */
-
-.fac-banner {
-  margin-top: 20px;
-  margin-left: 350px;
-  .txt {
-    text-align: center;
-    margin-top: 100px;
-    h1 {
-      font-size: 40px;
-      font-weight: 700;
-      span {
-        border-bottom: 5px solid #e52936;
-      }
-    }
-    p {
-      font-size: 16px;
-      font-weight: 400;
-    }
-  }
-}
-
-.fac-sec1 {
-  margin-top: 100px;
-  .yy {
-    margin-top: 23px;
-  }
-}
-
-@media (max-width: 1024px) {
-  .fac-banner {
-    margin-left: 200px;
-  }
-}
-@media (max-width: 770px) {
-  .fac-banner {
-    margin-left: 50px;
-  }
-}
-@media (max-width: 545px) {
-  .fac-banner {
-    margin-left: 0;
+  /* contact page starts */
+  .contact-banner {
     img {
-      margin-left: 120px;
+      padding-left: 100px;
     }
-    .tt {
-      img {
-        margin-left: 150px;
+    .tt{
+      img{
+        padding-left: 110px;
       }
     }
   }
-  .fac-sec1 {
-    .rep {
-      padding-bottom: 22px;
-    }
-    .rpp {
-      padding-top: 22px;
-    }
-  }
-}
-@media (max-width: 440px) {
-}
 
-/* facility page ends */
-
-/* contact page starts */
-
-/* banner starts */
-.contact-banner {
-  margin-top: 20px;
-  margin-left: 300px;
-  .txt {
-    text-align: center;
-    margin-top: 100px;
-    h1 {
-      font-size: 40px;
-      font-weight: 700;
-      span {
-        border-bottom: 5px solid #e52936;
-      }
-    }
-    p {
-      font-size: 16px;
-      font-weight: 400;
-    }
-  }
-}
-
-/* banner ends */
-
-.form-ctn {
+ .form-ctn {
   margin-top: 100px;
+  background-image: none;
   .txt {
-    h1 {
-      font-size: 54px;
-      font-weight: 800;
-    }
-    p {
-      font-size: 14px;
-      font-weight: 400;
-    }
-    span {
-      color: #e52936;
-    }
     form {
       input {
-        padding: 10px 200px 10px 10px;
-        border-radius: 10px;
-        border: 1px solid rgb(209, 208, 208);
-        margin-bottom: 20px;
+        padding: 10px 180px 10px 10px;
       }
       textarea {
-        padding: 10px 220px 80px 10px;
-        border-radius: 10px;
-        border: 1px solid rgb(209, 208, 208);
-        margin-bottom: 20px;
+        padding: 10px 210px 80px 10px;
       }
-      a{
-        
+      a {
+        padding: 10px 160px 10px 180px;
+      }
+    }
+  }
+  .map {
+    iframe {
+      width: 350px;
+      margin-top: 100px;
+    }
+  }
+}
+
+  /* contact page ends */
+}
+
+@media (max-width: 375px) {
+/* faq page starts */
+
+.faqs-banner{
+ .fbn-img{
+   img{
+    width: 300px;
+  }
+ }
+}
+
+/* faq page ends */
+
+   /* contact page starts */
+
+   .contact-banner {
+    img {
+      padding-left: 50px;
+    }
+    .tt{
+      img{
+        padding-left: 100px;
+      }
+    }
+  }
+
+ .form-ctn {
+  margin-top: 100px;
+  background-image: none;
+  .txt {
+    form {
+      input {
+        padding: 10px 120px 10px 10px;
+      }
+      textarea {
+        padding: 10px 150px 80px 10px;
+      }
+      a {
+        padding: 10px 140px 10px 140px;
       }
     }
   }
   .map {
     iframe {
       width: 300px;
+      margin-top: 100px;
     }
   }
 }
 
-/* media query */
-
-@media (max-width: 1024px) {
-  .contact-banner {
-    margin-left: 160px;
-  }
+  /* contact page ends */
 }
-@media (max-width: 770px) {
-  .contact-banner {
-    margin-left: 0;
-  }
-}
-@media (max-width: 545px) {
-  .contact-banner {
-    img {
-      margin-left: 180px;
-    }
-  }
-}
-@media (max-width: 440px) {
-  .contact-banner {
-    img {
-      margin-left: 100px;
-    }
-  }
-}
-
-/* contact page ends */
